# Software-Security-Analysis

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md  build.sh  env.sh
.github/workflows/: build.yml  docker-publish-arm.yml  docker-publish-x86.yml
Assignment-1/: Assignment-1.cpp  Assignment-1.h  Assignment-1.py  CMakeLists.txt
Assignment-1/CPP/: Assignment-1.cpp  Assignment_1.cpp  Assignment_1.h  CMakeLists.txt  test.cpp
Assignment-1/Python/: AndersenPTA.py  Ass1_helper.py  Assignment1.py  Assignment_1.py  Assignment_1_Helper.py  CMakeLists.txt  Main.py  Test.py  test.py
Assignment-1/Tests/: CMakeLists.txt  test-icfg.cpp  test-pta.cpp  test-taint.cpp  test.cpp
Assignment-1/Tests/testcases/icfg/: test1.ll  test2.c  test2.ll
Assignment-1/Tests/testcases/pta/: test1.ll  test2.ll  test3.c  test3.ll  test4.ll
Assignment-1/Tests/testcases/taint/: test1.ll  test2.c  test2.ll  test3.c  test3.ll  test4.ll
Assignment-1/Tests/testcases/trav/: test1.ll  test2.c
Assignment-2/: Ass2_helper.py  Assignment-2.cpp  Assignment-2.h  Assignment-2.py  CMakeLists.txt  Z3SSEMgr.cpp  Z3SSEMgr.h
Assignment-2/CPP/: Assignment_2.cpp  Assignment_2.h  CMakeLists.txt  Z3SSEMgr.cpp  test-sse.cpp
Assignment-2/Python/: Ass2_helper.py  Assignment2.py  Assignment_2.py  CMakeLists.txt  Main.py  Test.py  Z3SSEMgr.py  test-sse.py
Assignment-2/Tests/: CMakeLists.txt  test-sse.cpp
Assignment-2/Tests/testcases/sse/: test1.ll  test2.c  test2.ll  test3.c  test3.ll
Assignment-3/: Ass3_helper.py  Assignment-3-Helper.cpp  Assignment-3-Helper.h  Assignment-3.cpp  Assignment-3.h  Assignment-3.py  CMakeLists.txt
Assignment-3/CPP/: AEHelper.cpp  AEReporter.cpp  AEReporter.h  Assignment-3-Helper.cpp  Assignment-3.cpp  Assignment-3.h  Assignment_3.cpp  Assignment_3.h  Assignment_3_Helper.cpp  Assignment_3_Helper.h  CMakeLists.txt  test-ae.cpp
Assignment-3/Python/: AEHelper.py  AEReporter.py  Ass3_helper.py  Assignment3.py  Assignment_3.py  Assignment_3_Helper.py  CMakeLists.txt  Main.py  Test.py  test-ae.py
Assignment-3/Tests/: CMakeLists.txt  buf_overflow.c  buf_overflow.ll  null_deref.c  null_deref.ll  stmt.c  stmt.ll  test-absexe.cpp  test-ae.cpp
Assignment-3/Tests/ae/: test1.ll  test2.c  test2.ll  test3.c  test3.ll  test4.ll  test5.c  test5.ll  test6.ll
Assignment-3/Tests/ae_testcases/: while.c
Assignment-3/Tests/buf/: test1.c  test1.ll  test2.c  test2.ll  test3.c  test3.ll  test4.c  test4.ll  test5.c  test5.ll  test6.c  test6.ll
Assignment-3/Tests/buf_testcases/: CWE_buf_loop.c  CWE_buf_rand.c
CodeGraph/: CMakeLists.txt  codegraph.cpp
CodeGraph/testcases/: example.c  swap.c
HelloWorld/: CMakeLists.txt  hello.cpp  hello.py
Lab-Exercise-1/: CMakeLists.txt  GraphAlgorithm.cpp  GraphAlgorithm.h  GraphTraversal.cpp  GraphTraversal.h  GraphTraversal.ipynb  test.cpp
Lab-Exercise-1/CPP/: GraphAlgorithm.cpp  GraphAlgorithm.h
Lab-Exercise-1/Python/: GraphAlgorithm.ipynb
Lab-Exercise-2/: CMakeLists.txt  Lab2.ipynb  Z3ExampleMgr.cpp  Z3ExampleMgr.h  Z3Examples.cpp  Z3Examples.h  Z3Mgr.cpp  Z3Mgr.h  test.cpp
Lab-Exercise-2/CPP/: Z3Examples.cpp  Z3Examples.h  Z3Mgr.cpp  test.cpp
Lab-Exercise-2/Python/: Lab2.ipynb  Z3Examples.ipynb
Lab-Exercise-3/: AEMgr.cpp  AEMgr.h  CMakeLists.txt  Lab3.ipynb  test.cpp
Lab-Exercise-3/CPP/: AEMgr.cpp  AEMgr.h  test.cpp
Lab-Exercise-3/Python/: AEMgr.ipynb
SVFIR/: SVFIR.cpp  compile.sh
SVFIR/overflow/: branch.c  branch_safe.c  interprocedural.c  interprocedural_safe.c  loop_1.c  loop_2.c  loop_3.c  struct_and_array_1.c  struct_and_array_2.c  struct_and_array_safe.c
SVFIR/src/: andersen.c  branch.c  control-flow.c  demo.c  interprocedural.c  swap.c
